--- a/views/home.html
+++ b/views/home.html
@@ -1,5 +1,8 @@
 <div class="settings">
 	<h4>Twitter Home</h4>
+	<a ui-sref="home.user">User Settings</a> - <a ui-sref="home.notifications">Notification Settings</a> -
+	<a ui-sref="home.timeline">User Timeline</a>
 
+    <div ui-view></div>
 
 </div>
